Add public offer get method and test offers